--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,7 @@
             "@auto-scripts"
         ],
         "compile": [
-            "php bin/console doctrine:schema:update --force --no-intraction"
+            "php bin/console doctrine:schema:update --force --no-intraction npm run"
         ]
     },
     "conflict": {
